[metadata]
name = Test
author = Test
author-email = test@example.com
description-file = README.rst
summary = my test package
classifier =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Development Status :: 2 - Pre-Alpha
keywords =
    vats
license = proprietary
version = 0.1.0
[files]
